--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "mode": "debug",
             "program": "${workspaceFolder}",
             "env": {"GITHUB_TOKEN":"${env:GITHUB_TOKEN}"}, // forward the github token to the debug environment
-            "args": []
+            "args": ["--debug=false", "--maxUpdates=10"]
         }
     ]
 }
