--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "mode": "debug",
             "program": "${workspaceFolder}",
             "env": {"GITHUB_TOKEN":"${env:GITHUB_TOKEN}"}, // forward the github token to the debug environment
-            "args": ["--debug=true", "--maxUpdates=10"]
+            "args": ["--debug=true", "--maxUpdates=10", "--project=https://github.com/orgs/slsa-framework/projects/5"]
         }
     ]
 }
